address review: self-contained SQL tests, dynamic URL, stronger assertions, @Tag(slow)
- Make sqlSelectFromTypeShouldNotThrow/sqlSelectFieldsShouldWork self-contained
  with own vertex types (SqlSelectAll, SqlSelectFields) per gemini review
- cypherMatchReturnVertexProjectionWorkaround uses own isolated type (IssueUserProj)
  to eliminate cross-test ordering dependency per claude review
- Assert on result record counts where data is explicitly created per claude review
- Use getDatabaseName() in default-serializer test URL per gemini review
- Import HttpURLConnection/URL/Base64/Collections instead of FQN per claude review
- Add @Tag("slow") to 110-vertex pagination test per claude review